force-app/main/default/objects/ER_ContractLineItem__c/ER_ContractLineItem__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item</label>
    <nameField>
        <label>Contract Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>