force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ER_Business_Unit__c</fullName>
    <formula>ER_Contract__r.ER_Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>