force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Contract__c.field-meta.xml
<CustomField>
    <fullName>ER_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>ER_ContractLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>