force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>ER_Contract_Status__c</fullName>
    <formula>TEXT(ER_Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>