force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Description__c.field-meta.xml
<CustomField>
    <fullName>ER_Description__c</fullName>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>