force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Discount__c.field-meta.xml
<CustomField>
    <fullName>ER_Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>