force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>