force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_IsActive__c.field-meta.xml
<CustomField>
    <fullName>ER_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>