force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Last_date_of_Sync__c.field-meta.xml
<CustomField>
    <fullName>ER_Last_date_of_Sync__c</fullName>
    <label>Last date of Sync</label>
    <type>DateTime</type>
</CustomField>