force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>ER_LineNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>