force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ER_ListPrice__c</fullName>
    <label>Standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>