force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Minimum_Fee__c.field-meta.xml
<CustomField>
    <fullName>ER_Minimum_Fee__c</fullName>
    <label>Minimum Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>