force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_NeedApproval__c.field-meta.xml
<CustomField>
    <fullName>ER_NeedApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Approval ?</label>
    <type>Checkbox</type>
</CustomField>