force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ER_Percentage__c</fullName>
    <label>Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>