force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>ER_PricebookEntryId__c</fullName>
    <label>Price Book Entry ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>