force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Product2__c.field-meta.xml
<CustomField>
    <fullName>ER_Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billable Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>ContractLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>