force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ER_ProductCode__c</fullName>
    <formula>ER_Product2__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>