force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ER_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>