force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_Solution__c.field-meta.xml
<CustomField>
    <fullName>ER_Solution__c</fullName>
    <formula>ER_Product2__r.ER_Solution_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution</label>
    <type>Text</type>
</CustomField>