force-app/main/default/objects/ER_ContractLineItem__c/fields/ER_UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ER_UnitPrice__c</fullName>
    <label>Sales Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>