force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Activity_Exception__c.field-meta.xml
<CustomField>
    <fullName>IT_Activity_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Exception</label>
    <type>Checkbox</type>
</CustomField>