force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Address_Row_display__c.field-meta.xml
<CustomField>
    <fullName>IT_Address_Row_display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Row display</label>
    <type>Checkbox</type>
</CustomField>