force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Amount__c.field-meta.xml
<CustomField>
    <fullName>IT_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>