force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Amount_Display__c.field-meta.xml
<CustomField>
    <fullName>IT_Amount_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Display</label>
    <type>Checkbox</type>
</CustomField>