force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Business_Association_Font_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Business_Association_Font_Type__c</fullName>
    <label>Business Association Font Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>06</fullName>
                <label>FONT 6</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>FONT 9</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>FONT 2</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>FONT 3</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>FONT 4</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>FONT 5</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>FONT 8</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>FONT 7</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>