force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Business_Association_Logo_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Business_Association_Logo_Code__c</fullName>
    <label>Business Association Logo Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>LOGO WITH LOVE BIG</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>MEAL TICKET SERVICE DAY</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>LUNCH</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>BREAK TIME</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>MEAL TICKET</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>