force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Business_Association_Logo_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Business_Association_Logo_Type__c</fullName>
    <label>Business Association Logo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <label>LOGO ON COVER AND TICKET</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>LOGO ON TICKET</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>LOGO ON COVER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>