force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Card_Type__c</fullName>
    <label>Card Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>