force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Data_on_Address_Row__c.field-meta.xml
<CustomField>
    <fullName>IT_Data_on_Address_Row__c</fullName>
    <label>Data on Address Row</label>
    <length>30</length>
    <type>Text</type>
</CustomField>