force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Display_Active_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_Display_Active_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Active Name</label>
    <type>Checkbox</type>
</CustomField>