force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Display_Address__c.field-meta.xml
<CustomField>
    <fullName>IT_Display_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Address</label>
    <type>Checkbox</type>
</CustomField>