force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Display_Locale__c.field-meta.xml
<CustomField>
    <fullName>IT_Display_Locale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Locale</label>
    <type>Checkbox</type>
</CustomField>