force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Emitted_Ticket_Copies_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Emitted_Ticket_Copies_Number__c</fullName>
    <label>Emitted Ticket Copies Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>