force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Envelope__c.field-meta.xml
<CustomField>
    <fullName>IT_Envelope__c</fullName>
    <label>Envelope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>