force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Feedback_Request__c.field-meta.xml
<CustomField>
    <fullName>IT_Feedback_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Request</label>
    <type>Checkbox</type>
</CustomField>