force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_File_Sending_Authorization__c.field-meta.xml
<CustomField>
    <fullName>IT_File_Sending_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>File Sending Authorization</label>
    <type>Checkbox</type>
</CustomField>