force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Font_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Font_Type__c</fullName>
    <label>Font Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Font_Type</valueSetName>
    </valueSet>
</CustomField>