force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Front_and_Back_Printout__c.field-meta.xml
<CustomField>
    <fullName>IT_Front_and_Back_Printout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Front and Back Printout</label>
    <type>Checkbox</type>
</CustomField>