force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Future_Change_Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>IT_Future_Change_Contract_Line_Item__c</fullName>
    <label>Future Change Contract Line Item</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>