force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Graphic_Layer_Back__c.field-meta.xml
<CustomField>
    <fullName>IT_Graphic_Layer_Back__c</fullName>
    <label>Graphic Layer Back</label>
    <length>255</length>
    <type>Text</type>
</CustomField>