force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Graphic_Layer_Front__c.field-meta.xml
<CustomField>
    <fullName>IT_Graphic_Layer_Front__c</fullName>
    <label>Graphic Layer Front</label>
    <length>255</length>
    <type>Text</type>
</CustomField>