force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Itinerant_Client__c.field-meta.xml
<CustomField>
    <fullName>IT_Itinerant_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Itinerant Client</label>
    <type>Checkbox</type>
</CustomField>