force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Logo_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Logo_Code__c</fullName>
    <label>Logo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>