force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Logo_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Logo_Type__c</fullName>
    <label>Logo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Logo_Type</valueSetName>
    </valueSet>
</CustomField>