force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_No_Ads__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Ads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Ads</label>
    <type>Checkbox</type>
</CustomField>