force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Printout_Employee_Copies_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Printout_Employee_Copies_Number__c</fullName>
    <label>Printout/Employee Copies Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>