force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Product__c.field-meta.xml
<CustomField>
    <fullName>IT_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_Service__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>IT_Product</valueSetName>
    </valueSet>
</CustomField>