force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Single_Series_Emission__c.field-meta.xml
<CustomField>
    <fullName>IT_Single_Series_Emission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Series Emission</label>
    <type>Checkbox</type>
</CustomField>