force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Stock_Orders__c.field-meta.xml
<CustomField>
    <fullName>IT_Stock_Orders__c</fullName>
    <label>Stock Orders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>CUSTOMER IS NOT A STOCK</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>DUMMY FOR CUSTOMER ORDER STOCK</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CUSTOMER ORDER WITH EITHER TRADITIONAL FROM STOCK</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>WITH ONLY A CUSTOMER ORDER STOCK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>