force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Technical_Data_Progressive__c.field-meta.xml
<CustomField>
    <fullName>IT_Technical_Data_Progressive__c</fullName>
    <label>Technical Data Progressive</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>