force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Ticket_Return_Request__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket_Return_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket Return Request</label>
    <type>Checkbox</type>
</CustomField>