force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Ticket_Value__c.field-meta.xml
<CustomField>
    <fullName>IT_Ticket_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket Value</label>
    <type>Checkbox</type>
</CustomField>