force-app/main/default/objects/ER_ContractLineItem__c/fields/IT_Web_Enabling_Level__c.field-meta.xml
<CustomField>
    <fullName>IT_Web_Enabling_Level__c</fullName>
    <label>Web Enabling Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Web_Enabling_Level</valueSetName>
    </valueSet>
</CustomField>