force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT01_Ticket_Type_and_Ticket_Display.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Ticket_Type_and_Ticket_Display</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name != &#39;IT System Integration&#39;,

NOT(ISPICKVAL(IT_Ticket_Type__c ,&#39;1&#39;)),
PRIORVALUE(IT_Ticket_Display__c )!=IT_Ticket_Display__c 


)</errorConditionFormula>
    <errorMessage>If ticket type equals &#39;GOOD COMPANY&#39; Ticket Display cannot be evaluated</errorMessage>
</ValidationRule>