force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT02_Data_on_Address_Row.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Data_on_Address_Row</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR( 
IT_Address_Row_display__c =true,
IT_Display_Address__c =true),
 IT_Data_on_Address_Row__c != null,

$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;))</errorConditionFormula>
    <errorMessage>If the fields Display_Address and Address Row display are valued,
the field Data on Address Row cannot be changed!</errorMessage>
</ValidationRule>