force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT04_Future_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT04_Future_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND ($User.ER_BypassVR__c = False,
ISPICKVAL( 	$User.ER_Business_Unit__c , &#39;IT&#39;),
				IT_Future_Change_Contract_Line_Item__c != &#39;&#39;,   
					ISPICKVAL( IT_Financial_Center__r.IT_Client_Status__c , &#39;02&#39;) ,
					OR(  ISCHANGED(IT_Product__c),  
								ISCHANGED( IT_Ticket_Type__c ) , 
								ISCHANGED( IT_Ticket_Display__c ) ,  
								ISCHANGED( IT_Display_Active_Name__c ),  
								ISCHANGED( IT_Address_Row_display__c ) , 
								ISCHANGED( IT_Display_Locale__c )  ) )</errorConditionFormula>
    <errorMessage>It&#39;s impossible to modify Technical Data if there are existing future change!</errorMessage>
</ValidationRule>