force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT05_Locality_CleanWay_TicketService.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT05_Locality_CleanWay_TicketService</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 
				IT_Display_Locale__c = true , 
				$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c ,&#39;IT&#39;),
OR( 
ISPICKVAL( IT_Service__c , &#39;4&#39;), 
ISPICKVAL( IT_Service__c , &#39;0I&#39;),
ISPICKVAL( IT_Service__c , &#39;E&#39;),
ISPICKVAL( IT_Service__c , &#39;6&#39;),
ISPICKVAL( IT_Service__c , &#39;M&#39;),
ISPICKVAL( IT_Service__c , &#39;0N&#39;),
ISPICKVAL( IT_Service__c , &#39;0Z&#39;),
ISPICKVAL( IT_Service__c , &#39;0R&#39;),
ISPICKVAL( IT_Service__c , &#39;0S&#39;)
  ))</errorConditionFormula>
    <errorMessage>Locality management must not be managed by Clean Way and Ticket Service&#39;s client!</errorMessage>
</ValidationRule>