force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT07_Service_SingleSeriesEmission.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT07_Service_SingleSeriesEmission</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL( IT_Financial_Center__r.IT_Client_Status__c , &#39;02&#39;),
					$User.ER_BypassVR__c = False,
	ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
IT_Single_Series_Emission__c = true ,
AND( NOT(ISPICKVAL (IT_Product__c, &#39;T0&#39;)),
NOT(ISPICKVAL (IT_Product__c, &#39;C0&#39;))),
				AND(
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;0I&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;6&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;M&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;C&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1A&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;R&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;S&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;W&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;Y&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1B&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1M&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1L&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1O&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1NL&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1R&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1V&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1X&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;2X&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1Y&#39;)),
NOT(ISPICKVAL ( IT_Financial_Center__r.IT_Service__c , &#39;1W&#39;)))
)</errorConditionFormula>
    <errorMessage>This type of service requires that &quot;Single Series Emission&quot; field is set only if the product is a Custom Carnet!</errorMessage>
</ValidationRule>