force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT08_Ticket_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT08_Ticket_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $User.ER_BypassVR__c = False,
ISPICKVAL(	$User.ER_Business_Unit__c , &#39;IT&#39;),
				
				IT_Ticket_Display__c =true,
	NOT( ISPICKVAL( IT_Ticket_Type__c , &#39;1&#39;) )
				
				)</errorConditionFormula>
    <errorMessage>Ticket Type must be &#39;GOOD MEAL&#39; if  Ticket Display equals true</errorMessage>
</ValidationRule>