force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT09_Order_Receipts_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT09_Order_Receipts_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $User.ER_BypassVR__c = False,
ISPICKVAL( $User.ER_Business_Unit__c , &#39;IT&#39;),

ISPICKVAL( IT_Financial_Center__r.IT_Client_Status__c, &#39;02&#39; ),
 ISPICKVAL( IT_Order_Receipts_Type__c, &#39;&#39; ) 

)</errorConditionFormula>
    <errorMessage>Insert Order Receipts Type!</errorMessage>
</ValidationRule>