force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT10_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT10_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					$User.ER_BypassVR__c = False,
ISPICKVAL(	$User.ER_Business_Unit__c , &#39;IT&#39;),
					
					NOT(				ISPICKVAL(IT_Service__c , &#39;1G&#39;)),  
NOT(	ISPICKVAL(IT_Service__c , &#39;1F&#39;)),
	NOT(ISPICKVAL(IT_Service__c , &#39;0G&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;0F&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;2F&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;2G&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;0J&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;2K&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;2J&#39;)),
NOT(	ISPICKVAL(IT_Service__c , &#39;0K&#39;)),
					
					 ISCHANGED(IT_Stock_Orders__c))</errorConditionFormula>
    <errorMessage>Stock Orders cannot be modified for the Service Type</errorMessage>
</ValidationRule>