force-app/main/default/objects/ER_ContractLineItem__c/validationRules/VRIT11_Ticket.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT11_Ticket</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL( $User.ER_Business_Unit__c , &#39;IT&#39;),

NOT( ISPICKVAL(IT_Service__c , &#39;4&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;6&#39;)),
NOT(ISPICKVAL(IT_Service__c , &#39;E&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;0G&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;0F&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;0P&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;0Q&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;2F&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;2G&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;1E&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;2K&#39;)),
NOT( ISPICKVAL(IT_Service__c , &#39;0K&#39;)),

ISCHANGED(IT_Emitted_Ticket_Copies_Number__c))</errorConditionFormula>
    <errorMessage>Emitted Ticket Copies Number cannot be modified for the Service Type</errorMessage>
</ValidationRule>